--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
         }
         .imgone
         {
-            top:90px;
+            matop:90px;
             left:30px;
-            position:fixed;
         }
         .transbox
         {
@@ -68,7 +67,6 @@
             filter:alpha(opacity=60);
             top:110px;
             left:600px;
-            position:fixed;
         }
         .tableone
         {
@@ -84,11 +82,12 @@
 </head>
 <body>
 <div class="first">
-    <a href="https://mobile.alipay.com/index.htm" class="marginone">支付宝APP</a>
-    <a href="https://www.alipay.com:443" class="margintwo">支付宝首页 |</a>
-    <a href="https://www.alipay.com:443" class="marginthree"> 服务大厅 |</a>
-    <a href="https://www.alipay.com:443" class="marginthree"> 提建议</a>
-    <Br/>
+    <a href="https://mobile.alipay.com/index.htm" class="marginone">
+        <span>支付宝APP</span>
+    </a>
+    <a href="https://www.alipay.com:443" class="margintwo">支付宝首页 &nbsp|</a>
+    <a href="https://www.alipay.com:443" class="marginthree"> &nbsp服务大厅 &nbsp|</a>
+    <a href="https://www.alipay.com:443" class="marginthree"> &nbsp提建议</a>
 </div>
     <img src="image/T1HHFgXXVeXXXXXXXX.png" class="imgone">
     <div class="transbox">
