--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         }
         body
         {
-            margin-left:0px;
-            margin-top:0px;
             background:url('image/1V4o5xqtgr_src.jpg') no-repeat top left;
         }
         .first
@@ -22,11 +20,13 @@
             background-color:#1e1b29;
             height:28px;
         }
+        .first-1
+        {
+            margin-left: 30px;
+            margin-right: 30px;
+        }
         .marginone
         {
-            margin-top:0px;
-            margin-right:0px;
-            margin-left:30px;
             font-family:"Times New Roman",Times,serif;
             color:#03a2e4;
             text-decoration:none;
@@ -36,7 +36,7 @@
         {
             margin-top:0px;
             margin-right:0px;
-            margin-left:730px;
+            margin-left:65%;
             font-family:"Times New Roman",Times,serif;
             color:#96979c;
             text-decoration:none;
@@ -52,21 +52,55 @@
             text-decoration:none;
             font-size:76%;
         }
-        .imgone
+        .body2
         {
-            matop:90px;
-            left:30px;
+            margin-left:30px;
+            margin-right:30px;
+            padding-top: 60px;
+        }
+        .transboxfirst
+        {
+            width: 280px;
+            height: 37px;
+            background-color: rgba(0,0,0,0.6);
+            margin-top:40px;
+            margin-left:100px;
+        }
+        .scan
+        {
+            float: left;
+            width: 50%;
+            color: #fff;
+            text-align: center;
+            border-bottom: 2px #fff solid;
+            font-size: 16px;
+            padding: 15px 0 4px;
+            cursor: pointer;
+        }
+        .number
+        {
+            float: right;
+            width: 50%;
+            color: #fff;
+            text-align: center;
+            border-bottom: 2px #fff solid;
+            font-size: 16px;
+            padding: 15px 0 4px;
+            cursor: pointer;
         }
         .transbox
         {
             width: 280px;
-            height: 280px;
-            margin: 30px 50px;
-            background-color: #000;
-            opacity:0.6;
-            filter:alpha(opacity=60);
-            top:110px;
-            left:600px;
+            height: 260px;
+            background-color: rgba(0,0,0,0.6);
+            margin-top:0px;
+            margin-left:100px;
+        }
+        .transboxsmall
+        {
+            width: 40px;
+            height: 40px;
+            background-color: rgba(100,101,101,1);
         }
         .tableone
         {
@@ -82,22 +116,28 @@
 </head>
 <body>
 <div class="first">
-    <a href="https://mobile.alipay.com/index.htm" class="marginone">
-        <span>支付宝APP</span>
-    </a>
-    <a href="https://www.alipay.com:443" class="margintwo">支付宝首页 &nbsp|</a>
-    <a href="https://www.alipay.com:443" class="marginthree"> &nbsp服务大厅 &nbsp|</a>
-    <a href="https://www.alipay.com:443" class="marginthree"> &nbsp提建议</a>
-</div>
-    <img src="image/T1HHFgXXVeXXXXXXXX.png" class="imgone">
-    <div class="transbox">
-    <table class="tableone">
-        <tr>
-            <th>Company</th>
-            <th>Company</th>
-        </tr>
-
-    </table>
+    <div class="first-1">
+        <a href="https://mobile.alipay.com/index.htm" class="marginone">
+            <span>支付宝APP</span>
+        </a>
+        <a href="https://www.alipay.com:443" class="margintwo">支付宝首页 &nbsp|</a>
+        <a href="https://www.alipay.com:443" class="marginthree"> &nbsp服务大厅 &nbsp|</a>
+        <a href="https://www.alipay.com:443" class="marginthree"> &nbsp提建议</a>
     </div>
+</div>
+<div class="body2">
+    <img src="image/T1HHFgXXVeXXXXXXXX.png">
+    <div class="transboxfirst">
+        <p class="scan">扫码登录</p>
+        <div class="number">账号登录</div>
+    </div>
+    <div class="transbox">
+        <div class="transboxsmall">
+
+        </div>
+
+    </div>
+
+</div>
 </body>
 </html>
