--- a/index.html
+++ b/index.html
@@ -11,58 +11,53 @@
             margin: 0;
             padding: 0;
         }
+        .clearfix:after{content:'';display:block;clear:both;height:0;overflow:hidden;visibility:hidden;}
+        .clearfix{zoom:1;}
+
         body{
-            background:url('image/1V4o5xqtgr_src.jpg') no-repeat top;
+            background:url('image/1V4o5xqtgr_src.jpg') no-repeat top ;
+            background-size: cover;
+            color: #fff;
         }
         input{
-            border-width:0;
-            border-color:white;
-            border-style:none;
+            border:0 none white;
             background:none;
         }
-        .first
-        {
+        .first{
             background-color:#1e1b29;
             height:28px;
         }
-        .first-1
-        {
-            margin-left: 30px;
-            margin-right: 30px;
+        .first-1{
+            margin:0 30px;
             height:28px;
         }
-        .first-2
-        {
+        .first-2{
             margin-top:7px;
             height:14px;
             width:300px;
             float: right;
         }
-        .marginone
-        {
+        .marginone{
             font-family:"Times New Roman",Times,serif;
             color:#03a2e4;
             text-decoration:none;
             font-size:76%;
         }
-        .margintwo
-        {
+        .margintwo{
             float: right;
             font-family:"Times New Roman",Times,serif;
             color:#96979c;
             text-decoration:none;
             font-size:76%;
         }
-        .marginthree
-        {
+        .marginthree{
             float: right;
             font-family:"Times New Roman",Times,serif;
             color:#96979c;
             text-decoration:none;
             font-size:76%;
         }
-        .body2
-        {
+        .body2{
             margin-left:40px;
             margin-right:40px;
             padding:60px 0px 60px 0px;
@@ -73,16 +68,14 @@
             height:90px;
 
         }
-        .transboxfirst
-        {
+        .transbox-first{
             width: 280px;
             height: 42px;
             background-color: rgba(0,0,0,0.6);
             margin-top:32px;
             margin-left:60%;
         }
-        .scan
-        {
+        .scan{
             float: left;
             width: 50%;
             color: #fff;
@@ -92,8 +85,7 @@
             padding: 15px 0 4px;
             cursor: pointer;
         }
-        .number
-        {
+        .number{
             float: right;
             width: 50%;
             color: #fff;
@@ -103,44 +95,38 @@
             padding: 15px 0 4px;
             cursor: pointer;
         }
-        .transbox
-        {
+        .transbox{
             width: 280px;
             height: 260px;
             background-color: rgba(0,0,0,0.6);
             margin-top:0px;
             margin-left:60%;
         }
-        .transboxsmall
-        {
+        .transbox-small{
             width: 200px;
             height: 240px;
             padding: 20px 40px 0px 40px;
         }
-        .account
-        {
+        .account{
             width: 200px;
             height: 40px;
             padding-bottom: 10px;
             padding-top: 5px;
         }
-        .account-1
-        {
+        .account-1{
             float: right;
             width: 160px;
             height: 40px;
             background-color:#fff;
         }
-        .INput
-        {
+        .input{
             margin-right: 10px;
             margin-top: 12px;
             margin-bottom: 10px;
             margin-left: 10px;
             border: 0px;
         }
-        .forget
-        {
+        .forget{
             font-family:"Times New Roman",Times,serif;
             color:#fff;
             text-decoration:none;
@@ -148,15 +134,13 @@
             width:200px;
             padding-bottom:18px;
         }
-        .SUnmit
-        {
+        .submit{
             background: url('image/log_in.png') no-repeat top;
             width: 200px;
             height: 50px;
             border: 0px;
         }
-        .final
-        {
+        .final{
             width: 200px;
             height: 10px;
             font-family:"Times New Roman",Times,serif;
@@ -177,28 +161,28 @@
 </div>
 <div class="body2">
     <img src="image/T1HHFgXXVeXXXXXXXX.png">
-    <div class="transboxfirst">
+    <div class="transbox-first clearfix">
         <p class="scan">扫码登录</p>
         <div class="number">账号登录</div>
     </div>
     <div class="transbox">
-        <div class="transboxsmall">
+        <div class="transbox-small">
             <div class="account">
                 <img src="image/user3.png" width="40px" height="40px">
                 <div class="account-1">
-                    <input class="INput" style="width: 140px" style="" >
+                    <input class="input" style="width: 140px" style="" >
                 </div>
             </div>
             <div class="account">
                 <img src="image/auth.png" width="40px" height="40px">
                 <div class="account-1">
-                    <input class="INput" style="width: 140px">
+                    <input class="input" style="width: 140px">
                 </div>
             </div>
             <div class="forget">
                 <span style="float:right;">忘记登录密码?</span>
             </div>
-            <input class="SUnmit" type="submit" value=" " />
+            <input class="submit" type="submit" value=" " />
             <div class="final">
                 <span style="color: #fff">淘宝会员登录</span>
                 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
