--- a/mode.html
+++ b/mode.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="tc.css">
     <style type="text/css">
         body
         {
@@ -22,11 +23,18 @@
             background-color: rgba(0,0,0,0.6);
             margin-top:40px;
             margin-left:100px;
-
     </style>
 </head>
 
 <body>
+<div style="width: 500px; background-color: #d58512;margin: 20px" class="clearfix">
+    <div style="height:100px;width: 50px;background-color: #2aabd2">10%大小
+        </div>
+    <div style="width: 20%;height:100px;background-color: #67b168;float: left">绿色
+        </div>
+    <div style="width: 30%;height:100px;background-color: #ffabd2;float: left">30%大小
+        </div>
+</div>
 <p>在下面的段落中，我们添加了一个样式为 <b>float:right</b> 的图像。结果是这个图像会浮动到段落的右侧。</p>
 <p>
     <div class="transbox">
