--- a/login-v3.html
+++ b/login-v3.html
@@ -45,9 +45,7 @@
                 <img class="icon" src="image/auth.png"/><input type="password" class="input"/>
             </div>
             <div class="row row-forget">
-                <a href="https://accounts.alipay.com" class="forget">
-                    忘记登录密码?
-                </a>
+                <a href="https://accounts.alipay.com" class="forget">忘记登录密码?</a>
             </div>
             <button class="submit" onclick="alert('欢迎!')"> </button>
             <div class="clearfix">
